# python-wikijs

./: .gitignore  LICENSE  readme.md  setup.cfg
src/wikijs/: __init__.py  asset.py  client.py  exceptions.py  page.py  system.py  typing.py  user.py
tests/: conftest.py  test_page.py
