[metadata]
name = wikijs
version = attr: wikijs.__version__
author = Nuno André
author_email = mail@nunoand.re
url = https://github.com/forensic-security/python-wikijs#readme
description = WikiJs API client
long_description = file: readme.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license-file = LICENSE
platform = any
keywords = wikijs, wiki, graphql
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki
    Typing :: Typed
project_urls =
    Source = https://github.com/forensic-security/python-wikijs
    Bug Tracker = https://github.com/forensic-security/python-wikijs/issues

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
package_dir =
    =src
packages = find:
setup_requires =
    setuptools >= 40.9.0
    wheel >= 0.32
install_requires =
    gql[aiohttp]

[options.packages.find]
where = src

[options.package_data]
cybereason =
    py.typed

[options.extras_require]
dev =
    flake8
    mypy
    pytest
docs =
    sphinx
    sphinx-rtd-theme

[flake8]
ignore = E221, E241
exclude =
    .git,
    __pycache__,
    .mypy_cache,
    .pytest_cache,
max-complexity = 10
inline-quotes = single
multiline-quotes = single
docstring-quotes = single

[tool:pytest]
norecursedirs = .venv .git .mypy_cache .pytest_cache
